# net-auto-switch

./: .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  config.example.toml  install.sh  pyproject.toml
.claude/commands/: release.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  gitleaks.yml  release.yml
completions/: README.md  _net-auto-switch
docs/adr/: 0001-layered-orchestration.md  0002-config-externalization-toml.md  0003-dry-run-no-side-effects.md  0004-uv-for-dependency-management.md  0005-guided-setup-wizard.md  0006-distribution-curl-installer.md  0007-configurable-regions.md  0008-wizard-subscription-region-detection.md  0009-init-health-gate.md  0010-configurable-managed-group.md  0011-install-from-release-tarball.md  0012-log-exit-operator-on-switch.md  0013-desktop-notifications-on-switch.md  0014-curated-release-asset.md  0015-cross-platform-core.md  0016-cross-platform-service.md  0017-two-level-geo-recognition.md  0018-node-blacklist.md  0019-required-domain-reachability.md
net_auto_switch/: blacklist.py  clash.py  cli.py  config.py  nodes_src.py  notify.py  orchestrator.py  service.py  setup.py  whois.py  wifi.py
net_auto_switch/geo/: __init__.py  by_name.py  by_whois.py  catalog.py
scripts/: check_encoding.py  install-hooks.sh  install-launchd.sh  launchd-wrapper.sh  net-auto-switch.plist  pre-commit  release-package.sh  start.sh  status.sh  stop.sh  uninstall-launchd.sh
skills/net-auto-switch/: SKILL.md
tests/: test_blacklist.py  test_clash.py  test_cli.py  test_config.py  test_geo.py  test_geo_whois.py  test_nodes_src.py  test_notify.py  test_orchestrator.py  test_service.py  test_setup.py  test_whois.py  test_wifi.py
