[project]
name = "net-auto-switch"
version = "0.3.2"
description = "Layered WiFi + Clash Verge auto-switch daemon for macOS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kingson Wu" }]
keywords = ["macos", "clash", "clash-verge", "wifi", "networking", "daemon", "launchd"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: MacOS X",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/OctopusGarage/net-auto-switch"
Repository = "https://github.com/OctopusGarage/net-auto-switch"
Issues = "https://github.com/OctopusGarage/net-auto-switch/issues"

[project.scripts]
net-auto-switch = "net_auto_switch.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["net_auto_switch*"]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# clash.py embeds an AppleScript UI-automation script whose selector chains are
# inherently long and cannot be wrapped without breaking the script.
"net_auto_switch/clash.py" = ["E501"]
