[project]
name = "net-auto-switch"
version = "0.2.5"
description = "Layered WiFi + Clash Verge auto-switch daemon for macOS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kingson Wu" }]
keywords = ["macos", "clash", "clash-verge", "wifi", "networking", "daemon", "launchd"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: MacOS X",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/OctopusGarage/net-auto-switch"
Repository = "https://github.com/OctopusGarage/net-auto-switch"
Issues = "https://github.com/OctopusGarage/net-auto-switch/issues"

[project.scripts]
net-auto-switch = "net_auto_switch.cli:main"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["net_auto_switch*"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pip-audit>=2.10.1",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "types-pyyaml>=6.0.12.20260518",
    "types-requests>=2.33.0.20260518",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
files = ["net_auto_switch"]
# Third-party libs without bundled types are covered by types-* stubs; anything
# still unstubbed is ignored rather than failing the gate.
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# clash.py embeds an AppleScript UI-automation script whose selector chains are
# inherently long and cannot be wrapped without breaking the script.
"net_auto_switch/clash.py" = ["E501"]
